타이머(timer), 인터벌(interbal) 예제

--- a/03_javascript_browser/03_Event/01_event-handler/01_event-handler-attribute.html
+++ b/03_javascript_browser/03_Event/01_event-handler/01_event-handler-attribute.html
@@ -8,7 +8,7 @@
 <body>
     <h1>01. 이벤트 핸들러 어트리뷰트</h1>
     <p>
-        HTML 이벤트 핸들러 어트리뷰트(ㅐㅜ wjqentk + 이벤트 타입)값으로 함수 호출문을 할당하여
+        HTML 이벤트 핸들러 어트리뷰트(on 접두사 + 이벤트 타입)값으로 함수 호출문을 할당하여
         이벤트 핸들러를 등록할 수 있다.
         (주의사항, 바닐라js에서 어트리뷰트방식은 반드시 해당 함수를 호출하게끔 작성할 것)
     </p>
