--- a/echartTest.html
+++ b/echartTest.html
@@ -38,6 +38,13 @@
             width: 80vh;
             overflow: hidden;
         }
+
+        #mountain-chart3 {
+            position: relative;
+            height: 50vh;
+            width: 80vh;
+            overflow: hidden;
+        }
     </style>
 </head>
 
@@ -267,6 +274,74 @@
                         { value: 120, name: '파닥몬' },
                         { value: 100, name: '엔젤몬' },
                         { value: 30, name: '가루몬' }
+                    ],
+                    emphasis: {
+                        itemStyle: {
+                            shadowBlur: 10,
+                            shadowOffsetX: 0,
+                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                        },
+
+                    }
+                }
+            ]
+        };
+
+        if (option && typeof option === 'object') {
+            myChart.setOption(option);
+        }
+
+        window.addEventListener('resize', myChart.resize);
+    </script>
+
+    
+    <!--빈 도넛 차트-->
+    <div id="mountain-chart3"></div>
+    <script>
+        var dom = document.getElementById('mountain-chart3');
+        var myChart = echarts.init(dom, null, {
+            renderer: 'canvas',
+            useDirtyRect: false
+        });
+        var app = {};
+
+
+        var option;
+
+        option = {
+            title: {
+                text: '',
+                left: 'center'
+            },
+            tooltip: {
+                trigger: 'item'
+            },
+            legend: {
+                orient: 'vertical',
+                left: 'left'
+            },
+            series: [
+                {
+                    name: 'Access From',
+                    type: 'pie',
+                    radius: '60%',
+                    label: {
+                        show: true,
+                        fontSize: 25, // ✅ 각 항목 이름(label) 글씨 크기
+                        distanceToLabelLine: 30, // ✅ 원과 글씨 사이 거리
+                        formatter: '{b}\n{c}' // ✅ {b}=이름, {c}=값 (줄바꿈으로 중간에 값 표시)
+                        // formatter: '{b}: {c}' 로 하면 한 줄로 이름:값 표시
+                    },
+                    labelLine: {
+                        show: true,
+                        length: 60,     // ✅ 첫 번째 선 길이
+                        length2: 45,    // ✅ 두 번째 선 길이
+                        lineStyle: {
+                            width: 3,     // ✅ 선 굵기
+                            color: '#666' // ✅ 선 색상 (원하는 색으로 조정 가능)
+                        }
+                    },
+                    data: [
                     ],
                     emphasis: {
                         itemStyle: {
