--- a/echartTest.html
+++ b/echartTest.html
@@ -70,7 +70,7 @@
             },
             legend: {
                 top: '5%',
-                left: 'center'
+                left: 'center',
             },
             series: [
                 {
